# gemss

./: .gitignore  LICENSE  README.md  TODO.md  algorithm_settings.json  generated_dataset_parameters.json  main.py  pyproject.toml  requirements.txt  run_sweep.ps1  setup.py  solution_postprocessing_settings.json
.github/: versionrc
.github/semantic-release-templates/: .release_notes.md.j2
.github/workflows/: ci.yml  pr-title.yml  release.yml
app/: README.md  explore_custom_dataset_app.py  gemss_explorer_noncommercial.html  gemss_explorer_noncommercial.py  gemss_explorer_unlimited.py
app/gemss_explorer_noncommercial/: index.html
data/: README.md  artificial_mixture_dataset.csv  artificial_mixture_labels.csv
feature_selection/: __init__.py  config.py  diagnostics.py  generate_artificial_dataset.py  inference.py  models.py  result_postprocessing.py  utils.py  visualizations.py
gemss/: __init__.py  config.py  generate_artificial_dataset.py  inference.py  models.py  recommendation_messages.py  recommendations.py  result_postprocessing.py  utils.py
gemss/config/: __init__.py  algorithm_settings.json  config.py  constants.py  generated_dataset_parameters.json  solution_postprocessing_settings.json
gemss/data_handling/: __init__.py  data_processing.py  generate_artificial_dataset.py
gemss/diagnostics/: __init__.py  experiment_results_analysis.py  experiment_results_visualizations.py  outliers.py  performance_tests.py  recommendation_messages.py  recommendations.py  result_postprocessing.py  simple_regressions.py  tabpfn_evaluation.py  visualizations.py
gemss/experiment_assessment/: __init__.py  case_analysis.py  experiment_results_analysis.py  experiment_results_interactive.py  experiment_results_visualizations.py
gemss/feature_selection/: __init__.py  inference.py  models.py  utils.py
gemss/postprocessing/: __init__.py  outliers.py  result_postprocessing.py  simple_regressions.py  tabpfn_evaluation.py
gemss/utils/: __init__.py  utils.py  visualizations.py
notebooks/: README.md  analyze_tier_results.ipynb  demo.ipynb  explore_custom_dataset.ipynb  explore_unknown_dataset.ipynb  tabpfn_evaluate_custom_dataset_results.ipynb  tabpfn_evaluation_example.ipynb
notebooks/analyze_experiment_results/: analysis_per_testcase.ipynb  analyze_hyperparameters.ipynb  analyze_tier_results.ipynb  tier_level_analysis.ipynb  top_level_analysis.ipynb
scripts/: README.md  benchmark_optimize.py  experiment_parameters.json  experiment_parameters_short.json  run_experiment.py  run_sweep.ps1  run_sweep_with_tiers.ps1  run_tiers.ps1
scripts/results/tier1/: tier_summary_metrics.csv
scripts/results/tier2/: tier_summary_metrics.csv
scripts/results/tier3/: tier_summary_metrics.csv
scripts/results/tier4/: tier_summary_metrics.csv
scripts/results/tier5/: tier_summary_metrics.csv
scripts/results/tier6/: tier_summary_metrics.csv
scripts/results/tier7/: tier_summary_metrics.csv
tests/: test_elbo_regularized.py  test_log_likelihood_missing.py  test_missing_data_native.py  test_optimize.py  test_structured_prior.py
