[project]
name = "gemss"
version = "0.1.0"
description = "GEMSS: Gaussian Ensemble for Multiple Sparse Solutions."
readme = "README.md"
requires-python = "==3.13.*"
authors = [
  { name = "Katerina Henclova", email = "katerina.henclova@datamole.ai" }
]
dependencies = [
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "marimo>=0.19.6",
    "numpy>=1.23.0",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=5.15.0",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy",
    "shap>=0.48.0",
    "tabpfn>=1.1.0",
    "torch>=2.0.0,<3.0.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]

[project.urls]
Repository = "https://github.com/kat-er-ina/gemss"

[tool.marimo.runtime]
output_max_bytes = 200_000_000

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemss"]
