[project]
name = "gemss"
version = "0.1.0"
description = "GEMSS: Gaussian Ensemble for Multiple Sparse Solutions."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Katerina Henclova", email = "katerina.henclova@datamole.ai" }
]
license = { text = "MIT" }
keywords = [
  "feature-selection",
  "sparse-regression",
  "bayesian",
  "variational-inference",
  "machine-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "marimo>=0.19.6",
    "numpy>=1.23.0",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=5.15.0",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy",
    "shap>=0.48.0",
    "tabpfn>=1.1.0",
    "torch>=2.0.0,<3.0.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.14",
]

[project.urls]
Repository = "https://github.com/kat-er-ina/gemss"

[tool.marimo.runtime]
output_max_bytes = 200_000_000

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemss"]

[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "PLE",    # pylint errors
    "PLC",    # pylint conventions
    "I001",   # isort - unsorted imports
    "ANN",    # flake8-annotations
    "UP",     # pyupgrade
    "PTH",    # flake8-use-pathlib
    "PT",     # flake8-pytest
    "TID",    # flake8-tidy-imports
]
lint.ignore = [
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN204",   # Allow missing return type annotation for __init__
    "N802",
    "N803",
    "N806",
    "N812",
]
src = ["src"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
indent-style = "space"
exclude = [
  "app/**",
  "notebooks/**",
  "scripts/**",
  "app/**",
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**" = ["ANN201", "T201"]
"notebooks/**" = ["ALL"]
"scripts/**" = ["ALL"]
"app/**" = ["ALL"]
